# ChangeLog for media-plugins/live
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $

  06 Jan 2010; Brent Baude <ranger@gentoo.org> live-2009.06.02.ebuild:
  Marking live-2009.06.02 ppc64 for bug 277009

*live-2009.11.12 (21 Nov 2009)

  21 Nov 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.11.12.ebuild:
  version bump

  21 Nov 2009; Alexis Ballier <aballier@gentoo.org> -live-2009.07.28.ebuild,
  -live-2009.09.04.ebuild:
  remove old

*live-2009.09.28 (29 Sep 2009)

  29 Sep 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.09.28.ebuild,
  +files/config.gentoo-so-r1, +files/live-recursive.patch:
  version bump and link the libs with g++

*live-2009.09.04 (18 Sep 2009)

  18 Sep 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.09.04.ebuild:
  version bump

  09 Aug 2009; nixnut <nixnut@gentoo.org> live-2009.06.02.ebuild:
  ppc stable #277009

  08 Aug 2009; Jeroen Roovers <jer@gentoo.org> live-2009.06.02.ebuild:
  Stable for HPPA (bug #277009).

*live-2009.07.28 (01 Aug 2009)

  01 Aug 2009; Steve Dibb <beandog@gentoo.org> +live-2009.07.28.ebuild:
  Version bump

  31 Jul 2009; <chainsaw@gentoo.org> live-2009.06.02.ebuild:
  Marked stable on AMD64 as requested by Alexis Ballier
  <aballier@gentoo.org>. Compile-tested on a dual hex-core Opteron system.

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> live-2009.06.02.ebuild:
  arm/ia64/sparc stable wrt #277009

  22 Jul 2009; Tobias Klausmann <klausman@gentoo.org>
  live-2009.06.02.ebuild:
  Stable on alpha, bug #277009

  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  live-2009.06.02.ebuild:
  stable x86, bug 277009

  22 Jun 2009; Alexis Ballier <aballier@gentoo.org> -live-2009.04.20.ebuild:
  remove old

*live-2009.06.02 (05 Jun 2009)

  05 Jun 2009; Alexis Ballier <aballier@gentoo.org> +live-2009.06.02.ebuild:
  version bump
