@@ -5,8 +5,10 @@ AUX live-recursive.patch 401 RMD160 512ee0cf4ca9139af5451be8bf7aa4321997cb03 SHA
 DIST live.2009.06.02.tar.gz 469471 RMD160 ddbe057ac4f47d66ee7c99ec3c4886fe97f06565 SHA1 a03ac47dc1b2a5e4745e30fc304af61675036782 SHA256 66c54241bfcc7ea42fe40e1c93739be79a3c065390c4163c0f2647ac45c24758
 DIST live.2009.09.28.tar.gz 449508 RMD160 c25cb1a2377f0fe6c3817bbc3edbcd4daa57d0dc SHA1 e5657206976f592e3fd1fda9cfe77b5712498784 SHA256 0e84700e8982ac5472723c0327131c179512d4b99fe0c4ae903cfe08a1a0e03c
 DIST live.2009.11.12.tar.gz 449650 RMD160 ef21d2b72aaf2044c9e96cadfe62cc1304d89843 SHA1 14830984d85ef710835d5e9c26ebb626b66c0260 SHA256 f6ee9c1079b5ab8e330c9edd7634bcffd76eb434cf52fe2ea06c4072bf823645
+DIST live.2010.04.09.tar.gz 452846 RMD160 3ee1d0c767e139e3d7cc66fd6409404e625dee73 SHA1 3c480355b153847273b30f0ce30cf80dff12e170 SHA256 e9539f59058cb885f28ac48cdce285f8a0fe567c4aa889c2ac3bd0638b007944
 EBUILD live-2009.06.02.ebuild 3620 RMD160 fad6bb38004c1cf82314d30c1d75f41f35fc30e1 SHA1 1cb5c9928b7fdc2606bb2c1b4aaf03b0cac6ca87 SHA256 acef1b41442cf00559571f96fc9c38aa790cf9c87d556c4c89a6edab5cce5090
 EBUILD live-2009.09.28.ebuild 3604 RMD160 fb4e033fdb1e03d8bc5dc110aac3d25f5a1f5a96 SHA1 257b75b7f4069281d9dda50fc6865a75d682e5c5 SHA256 ab3614863954e42ad04da0949c0cba5695879f0b3ecfa467c07d429d23ea1811
 EBUILD live-2009.11.12.ebuild 3615 RMD160 7d87dc6048107dacbdb8918e6c129dd701c83bd3 SHA1 e17abceb8b621a4ddbe82f7771c431dc8a438048 SHA256 76ce3b15e5ab2ce434b134d48da0891844f4e717e4f017c9c86310b002cc8968
-MISC ChangeLog 15724 RMD160 a28d414b11ee4b9f1058d349d70c855b8fcbb430 SHA1 bc5a61816267a90227af3979baf20c0d16f0702b SHA256 4215268abb9e6c055d7d1cbf603ea83ccd03c2733fd5ea95fbdb15b6867d3e83
+EBUILD live-2010.04.09.ebuild 3615 RMD160 03e3adb2d9cb546ec67bf1d478af7782f6d36e14 SHA1 85f3e68bcbb42d3862fad410d0827de9723f7290 SHA256 54ba20c55992723a7194fdd96d84177ad670a308084b470d9f609ecee4b2841d
+MISC ChangeLog 15851 RMD160 8da4f6f6b9f9a15cee5b5cf68589a46f01b57eff SHA1 239e59ca0dd38245c5ef302e1d9169b1b8eb7409 SHA256 ca2386dfa0d6c1df3303aed82d116bace077a7791ad1bf36231ae0893d6384ba
 MISC metadata.xml 225 RMD160 6e3fccd1ae62f02a0cb28d319aa185af0020822d SHA1 1b8ccc849053361ac907dc9b652796defd1ce906 SHA256 1a7f3e805478b42bc379b2a36944579d34d7e66ba5bf418a651e1cd58ad0a7f5
