@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/live
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.126 2010/01/06 16:55:17 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/live/ChangeLog,v 1.127 2010/04/24 17:23:03 aballier Exp $
+
+*live-2010.04.09 (24 Apr 2010)
+
+  24 Apr 2010; Alexis Ballier <aballier@gentoo.org> +live-2010.04.09.ebuild:
+  version bump
 
   06 Jan 2010; Brent Baude <ranger@gentoo.org> live-2009.06.02.ebuild:
   Marking live-2009.06.02 ppc64 for bug 277009
